--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 <!-- Specials Section -->
 <section id="specials" class="specials section">
   <div class="container section-title" data-aos="fade-up">
-    <h2>Specials</h2>
+    <h3>Specials</h3>
     <div><span>Discover Our</span> <span class="description-title">Signature Dishes</span></div>
   </div>
 
@@ -517,7 +517,7 @@
         <div><span>Book a</span> <span class="description-title">Table</span></div>
       </div><!-- End Section Title -->
       <div class="text-center mt-4">
-  <a href="https://m.me/349741858566089" target="_blank" class="btn btn-primary">
+  <a href="https://m.me/stonecitygrill" target="_blank" class="btn btn-primary">
     💬 Book a Table via Messenger
   </a>
 </div>
