--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="">
 
   <!-- Standard favicon (multi-size .ico) -->
-  <link rel="icon" href="assets/img/IMG_2159.png" sizes="any">
+<link rel="image/x-icon" href="assets/img/IMG_2159.png">
 <link rel="image/x-icon" href="assets/img/favicon.ico" sizes="any">
 <!-- Apple Touch Icon -->
 <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
