--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
           <div class="col-lg-6 position-relative align-self-start" data-aos="fade-up" data-aos-delay="100">
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
             <a href="https://youtu.be/drk9LQOVw8Q?si=cADiSogdYjW-93S4" class="glightbox pulsating-play-btn"></a>
+            <p>Click to play Video</p>
           </div>
           <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="200">
             <h3>Personalized setup and music upon request.</h3>
