--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
+  <style>
+  .fb-page {
+    max-width: 500px;
+    margin: 0 auto;
+  }
+</style>
+
+
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
@@ -857,8 +865,24 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <div><span>Check</span>Our<span class="description-title">Contact</span></div>
+        <div><span>Follow </span>Us On <span class="description-title">Facebook</span></div>
       </div><!-- End Section Title -->
+    
+          <!--- / Facebook Page section-->
+      <div class="fb-page" 
+     data-href="https://www.facebook.com/stonecitygrill"
+     data-tabs="timeline"
+     data-width="100%"
+     data-height="600"
+     data-small-header="false"
+     data-adapt-container-width="true"
+     data-hide-cover="false"
+     data-show-facepile="true">
+  <blockquote cite="https://www.facebook.com/stonecitygrill" class="fb-xfbml-parse-ignore">
+    <a href="https://www.facebook.com/stonecitygrill">Stone Grill Restaurant</a>
+  </blockquote>
+</div>
+
 
       <div class="mb-5">
        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62804.03520454493!2d124.71408614863282!3d10.321690499999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33076bc3d4b47087%3A0xa00e85f13f92744a!2sStone%20Grill%20Restaurant!5e0!3m2!1sen!2sph!4v1752913255022!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -1016,6 +1040,11 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" 
+   src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0">
+  </script>
+
 
 </body>
 
