--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        by <a href="https://bootstrapmade.com/">Stonegrill</a>
+        by <a href="https://www.facebook.com/stonecitygrill">@ 2025 Stone Grill Restaurant</a>
       </div>
     </div>
 
