--- a/index.html
+++ b/index.html
@@ -869,19 +869,27 @@
       </div><!-- End Section Title -->
     
           <!--- / Facebook Page section-->
-      <div class="fb-page" 
-     data-href="https://www.facebook.com/stonecitygrill"
-     data-tabs="timeline"
-     data-width="100%"
-     data-height="600"
-     data-small-header="false"
-     data-adapt-container-width="true"
-     data-hide-cover="false"
-     data-show-facepile="true">
-  <blockquote cite="https://www.facebook.com/stonecitygrill" class="fb-xfbml-parse-ignore">
-    <a href="https://www.facebook.com/stonecitygrill">Stone Grill Restaurant</a>
-  </blockquote>
+      <div class="container text-center my-5">
+        <h3 class="text-primary">📣 See Our Latest Updates on Facebook</h3>
+        <p class="text-muted">Follow <strong>Stone Grill Restaurant</strong> for news, promos, and mouthwatering photos!</p>
+      </div>
+
+      <div class="container my-4">
+    <div class="fb-page"
+       data-href="https://www.facebook.com/stonecitygrill"
+       data-tabs="timeline"
+       data-width="100%"
+       data-height="600"
+       data-small-header="false"
+       data-adapt-container-width="true"
+       data-hide-cover="false"
+       data-show-facepile="true">
+    <blockquote cite="https://www.facebook.com/stonecitygrill" class="fb-xfbml-parse-ignore">
+      <a href="https://www.facebook.com/stonecitygrill">Stone Grill Restaurant</a>
+    </blockquote>
+  </div>
 </div>
+
 
 
       <div class="mb-5">
