--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <!-- Apple Touch Icon -->
 <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png">
 <!-- Optional: Android manifest -->
+<link rel="icon" type="image/x-icon" href="https://stonegrillrestaurant.github.io/Delicious/assets/img/favicon.ico">
+
 <link rel="manifest" href="https://stonegrillrestaurant.github.io/Delicious/site.webmanifest">
 
   <!-- Fonts -->
@@ -1044,7 +1046,8 @@
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-
+  <script src="assets/js/main.js"></script>
+  <div id="fb-root"></div>
   <!-- Main JS File -->
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v23.0"></script>
 
