--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@
             <div class="row">
               <div class="col-lg-8 details order-2 order-lg-1">
                 <h3>Food Package</h3>
-                <p class="fst-italic">with bold flavors.</p>
-                <p>Enjoy our signature dish with your choice of sauce and sides — perfect for those who love a meal that sizzles with taste and excitement.</p>
+                <p class="fst-italic">Stone Grill Catering Service.</p>
+                <p> Enjoy delicious food and stress-free celebrations! Whether you’re planning a birthday, company event, or any special gathering, our catering service brings flavorful dishes and warm hospitality to your occasion. Book now VENUE IS FRE. .</p>
               </div>
               <div class="col-lg-4 text-center order-1 order-lg-2">
                 <img src="assets/img/specials-1.jpg" alt="" class="img-fluid">
