--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
             <div class="member">
               <div class="pic"><img src="assets/img/chefs/chefs-3.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Stephany</h4>
+                <h4>Stephanie</h4>
                 <span>Casher</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
