--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
                 <span>Head Chef</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.facebook.com/rony.gerobese"><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -724,7 +724,7 @@
                 <span>Casher</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href="https://www.facebook.com/stephanie.felicilda"><i class="bi bi-facebook"></i></a>
+                  <a href="https://facebook.com/stephanie.felicilda"><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -881,22 +881,6 @@
     </blockquote>
   </div>
 </div>
-<div class="container my-4" style="max-width: 500px; margin: auto;">
-  <div class="fb-page" 
-       data-href="https://www.facebook.com/stonecitygrill" 
-       data-tabs="timeline" 
-       data-width="100%" 
-       data-height="480" 
-       data-small-header="false" 
-       data-adapt-container-width="true" 
-       data-hide-cover="false" 
-       data-show-facepile="true">
-    <blockquote cite="https://www.facebook.com/stonecitygrill" class="fb-xfbml-parse-ignore">
-      <a href="https://www.facebook.com/stonecitygrill">Stone Grill Restaurant</a>
-    </blockquote>
-  </div>
-</div>
-
       <div class="mb-5">
        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62804.03520454493!2d124.71408614863282!3d10.321690499999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33076bc3d4b47087%3A0xa00e85f13f92744a!2sStone%20Grill%20Restaurant!5e0!3m2!1sen!2sph!4v1752913255022!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div><!-- End Google Maps -->
