--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
 <!-- Specials Section -->
 <section id="specials" class="specials section">
   <div class="container section-title" data-aos="fade-up">
-    <h3>Specials</h3>
-    <div><span>Discover Our</span> <span class="description-title">Signature Dishes</span></div>
+    <h3>WE OFFER/h3>
+    <div><span>CATERING SERVICES</span>and<span class="description-title">FOOD PACKAGES</span></div>
   </div>
 
   <div class="container" data-aos="fade-up" data-aos-delay="100">
