--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 <section id="menu" class="menu section">
   <div class="container section-title" data-aos="fade-up">
     <h2>Menu</h2>
-    <div><span>Explore</span> <span class="description-title">Stone Grill Dishes</span></div>
+    <div><span></span> <span class="description-title">Stone Grill Dishes</span></div>
   </div>
 
   <div class="container isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
@@ -246,7 +246,7 @@
           <li data-filter="*" class="filter-active">All</li>
           <li data-filter=".filter-starters">Starters</li>
           <li data-filter=".filter-salads">Refreshments</li>
-          <li data-filter=".filter-specialty">Stone Grill Specials</li>
+          <li data-filter=".filter-specialty">Set-Meals</li>
         </ul>
       </div>
     </div>
@@ -270,6 +270,24 @@
         </div>
         <div class="menu-ingredients">
           Classic stir-fried noodles loaded with veggies, meat, and savory flavor — a Filipino favorite, Stone Grill style
+        </div>
+      </div>
+      
+      <div class="col-lg-6 menu-item isotope-item filter-specialty">
+        <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
+        <div class="menu-content">
+          <a href="#">SET-C</a><span>₱200</span>
+        </div>
+        <div class="menu-ingredients">
+          A satisfying group feast packed with Filipino favorites! Set-C includes:
+🍗 Fried Chicken – golden and crispy, loved by all ages
+🥦 Chopsuey – fresh stir-fried vegetables with a savory twist
+🍝 Pancit Canton – classic noodle dish for long life and good times
+🦑 Calamares – tender squid rings, perfectly breaded and fried
+🐷 Crispy Pata – deep-fried pork knuckle, crunchy outside, juicy inside
+🔥 Pork Sisig – sizzling, flavorful, and just the right kick
+🍚🍚 2 Platter Rice – enough to share and satisfy every belly
+🥤 Iced Drinks – refreshing drinks to complete the meal
         </div>
       </div>
 
@@ -342,7 +360,6 @@
           Lobster meat with mayo and lettuce on a toasted roll.
         </div>
       </div>
-
     </div>
   </div>
 </section>
