--- a/index.html
+++ b/index.html
@@ -276,18 +276,18 @@
       <div class="col-lg-6 menu-item isotope-item filter-specialty">
         <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
         <div class="menu-content">
-          <a href="#">SET-C</a><span>₱200</span>
+          <a href="#">SET-C</a><span>₱1980</span>
         </div>
         <div class="menu-ingredients">
           A satisfying group feast packed with Filipino favorites! Set-C includes:
-🍗 Fried Chicken – golden and crispy, loved by all ages
-🥦 Chopsuey – fresh stir-fried vegetables with a savory twist
-🍝 Pancit Canton – classic noodle dish for long life and good times
-🦑 Calamares – tender squid rings, perfectly breaded and fried
-🐷 Crispy Pata – deep-fried pork knuckle, crunchy outside, juicy inside
-🔥 Pork Sisig – sizzling, flavorful, and just the right kick
-🍚🍚 2 Platter Rice – enough to share and satisfy every belly
-🥤 Iced Drinks – refreshing drinks to complete the meal
+          <p>🍗 Fried Chicken – golden and crispy, loved by all ages</p>
+          <p>🥦 Chopsuey – fresh stir-fried vegetables with a savory twist</p>
+          <p>🍝 Pancit Canton – classic noodle dish for long life and good times</p>
+          <p>🦑 Calamares – tender squid rings, perfectly breaded and fried</p>
+          <p>🐷 Crispy Pata – deep-fried pork knuckle, crunchy outside, juicy inside</p>
+          <p>🔥 Pork Sisig – sizzling, flavorful, and just the right kick</p>
+          <p>🍚🍚 2 Platter Rice – enough to share and satisfy every belly</p>
+          <p>🥤 Iced Drinks – refreshing drinks to complete the meal</p>
         </div>
       </div>
 
@@ -295,7 +295,7 @@
         <img src="assets/img/menu/cake.jpg" class="menu-img" alt="">
         <div class="menu-content">
           <a href="#">Calamari</a><span>₱300</span>
-        </div>
+      </div>
         <div class="menu-ingredients">
           Lightly breaded and fried to a golden crisp, our tender squid rings are served with zesty dipping sauce—perfectly crunchy, irresistibly good..
         </div>
