--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href="https://www.facebook.com/jerey.gata"><i class="bi bi-facebook"></i></a>
-                  <a href="instagram.com/jerey.gata"><i class="bi bi-instagram"></i></a>
+                  <a href="https://instagram.com/jerey.gata"><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -710,7 +710,7 @@
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href="https://www.facebook.com/rony.gerobese"><i class="bi bi-facebook"></i></a>
-                  <a href="">instagram.com/rony.gerobese<i class="bi bi-instagram"></i></a>
+                  <a href="https://instagram.com/rony.gerobese "><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -726,7 +726,7 @@
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href="https://www.facebook.com/jhie.mondano.eco"><i class="bi bi-facebook"></i></a>
-                  <a href="instagram.com/jhie.mondano.eco/"><i class="bi bi-instagram"></i></a>
+                  <a href="https://instagram.com/jhie.mondano.eco/"><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
@@ -742,7 +742,7 @@
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href="https://facebook.com/stephanie.felicilda"><i class="bi bi-facebook"></i></a>
-                  <a href="instagram.com/stephanie.felicilda"><i class="bi bi-instagram"></i></a>
+                  <a href="https://instagram.com/stephanie.felicilda"><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
