--- a/index.html
+++ b/index.html
@@ -726,8 +726,8 @@
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href="https://www.facebook.com/jhie.mondano.eco"><i class="bi bi-facebook"></i></a>
-                  <a href="https://wew.instagram.com/jhie.mondano.eco/"><i class="bi bi-instagram"></i></a>
-                  <a href="https://www.tiktok.com/@yourusername"><i class="bi bi-tiktok"></i></a>
+                  <a href="https://www.instagram.com/jhie.mondano.eco/"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.tiktok.com/jhiemondano"><i class="bi bi-tiktok"></i></a>
                 </div>
               </div>
             </div>
@@ -742,7 +742,7 @@
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href="https://facebook.com/stephanie.felicilda"><i class="bi bi-facebook"></i></a>
-                  <a href="https://instagram.com/stephanie.felicilda"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.instagram.com/stephanie.felicilda"><i class="bi bi-instagram"></i></a>
                   <a href="https://www.tiktok.com/@yourusername"><i class="bi bi-tiktok"></i></a>
                 </div>
               </div>
