--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <!-- =======================================================
   * Template Name: Delicious
   * Template URL: https://bootstrapmade.com/delicious-free-restaurant-bootstrap-theme/
