--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
       <div class="col-lg-3">
         <ul class="nav nav-tabs flex-column">
           <li class="nav-item">
-            <a class="nav-link active show" data-bs-toggle="tab" href="#specials-tab-1">Grilled Sizzlers</a>
+            <a class="nav-link active show" data-bs-toggle="tab" href="#specials-tab-1">Food Package</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" data-bs-toggle="tab" href="#specials-tab-2">Seafood Favorites</a>
@@ -388,7 +388,7 @@
             <a class="nav-link" data-bs-toggle="tab" href="#specials-tab-4">Stone Grill Picks</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-bs-toggle="tab" href="#specials-tab-5">Sweet Endings</a>
+            <a class="nav-link" data-bs-toggle="tab" href="#specials-tab-5">Catering SERVICES</a>
           </li>
         </ul>
       </div>
