--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
         </ul>
       </div>
     </div>
+  </div>
 
     <div class="row isotope-container" data-aos="fade-up" data-aos-delay="200">
 
