--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,8 @@
   <div id="fb-root"></div>
   <!-- Main JS File -->
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v23.0"></script>
-
+    <!-- Main JS File -->
+  <script src="assets/js/main.js"></script>
 
 </body>
 
