--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/logo.png" alt=""> -->
+          <img src="assets/img/web-app-manifest-192x192.png" alt="">
           <h1 class="sitename">Stone Grill Restaurant</h1>
         </a>
 
@@ -109,7 +109,7 @@
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
         <div class="carousel-item active">
-          <img src="assets/img/hero-carousel/IMG_0111.jpeg" alt="">
+          <img src="assets/img/hero-carousel/IMG_0111.jpg" alt="">
           <div class="carousel-container">
             <h3><span>Stone Grill</span> Restaurant</h3>
             <p>Whether it’s a quiet dinner or a big party, we’ll help you make lasting memories and to make it worth your time and taste..</p>
@@ -133,7 +133,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="assets/img/hero-carousel/hero-carousel-3.jpg" alt="">
+          <img src="assets/img/hero-carousel/hero-carousel-32.jpg" alt="">
           <div class="carousel-container">
             <h4>Great for reunions, corporate events, or anniversaries</h4>
             <p>the joy found in shared meals and genuine hospitality makes each visit worthwhile. At Stone Grill, we embrace what matters, good food, warm hearts, and time well spent.</p>
