--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <i class="bi bi-phone d-flex align-items-center d-none d-lg-block"><span>+6353 568 0539</span></i>
           <i class="bi bi-clock ms-4 d-none d-lg-flex align-items-center"><span>Mon-Sun: 10:00 AM - 9:00 PM</span></i>
         </div>
-        <a href="https://m.me/stonecitygrill" class="cta-btn">Book a table</a>
+        <a href="https://m.me/stonecitygrill" class="cta-btn">Message us</a>
       </div>
     </div><!-- End Top Bar -->
 
@@ -109,10 +109,10 @@
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
         <div class="carousel-item active">
-          <img src="assets/img/hero-carousel/IMG_0111.jpg" alt="">
+          <img src="assets/img/hero-carousel/20220707_103358628_iOS.jpg" alt="">
           <div class="carousel-container">
             <h3><span>Stone Grill</span> Restaurant</h3>
-            <p>Whether it’s a quiet dinner or a big party, we’ll help you make lasting memories and to make it worth your time and taste..</p>
+            <p>we’ll help you make lasting memories and to make it worth your time and taste..</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
               <a href="https://m.me/stonecitygrill" class="btn-get-started">Book a table</a>
@@ -127,7 +127,7 @@
             <p>At Stone Grill, every delight is to be embraced, every discomfort gently set aside. And even during busy days or special obligations, there’s always a place for good food and warm hospitality.</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
-              <a href="hytps://m.me/stonecitygrill" class="btn-get-started">Book a table</a>
+              <a href="hytps://m.me/stonecitygrill" class="btn-get-started">Message Us</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
@@ -135,11 +135,11 @@
         <div class="carousel-item">
           <img src="assets/img/hero-carousel/hero-carousel-32.jpg" alt="">
           <div class="carousel-container">
-            <h4>Great for reunions, corporate events, or anniversaries</h4>
-            <p>the joy found in shared meals and genuine hospitality makes each visit worthwhile. At Stone Grill, we embrace what matters, good food, warm hearts, and time well spent.</p>
+            <h4>Great for reunions and Corporate events</h4>
+            <p>genuine hospitality makes each visit worthwhile.</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
-              <a href="https://m.me/stonecitygrill" class="btn-get-started">Book a table</a>
+              <a href="https://m.me/stonecitygrill" class="btn-get-started">Call Us</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
