--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
-          <img src="assets/img/web-app-manifest-192x192.png" alt="">
+          <img src="assets/img/IMG_2159.png" alt="">
           <h1 class="sitename">Stone Grill Restaurant</h1>
         </a>
 
