--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
         <div class="carousel-item active">
-          <img src="assets/img/hero-carousel/20220707_103358628_iOS.jpg" alt="">
+          <img src="assets/IMG_0111.jpeg" alt="">
           <div class="carousel-container">
             <h3><span>Stone Grill</span> Restaurant</h3>
             <p>we’ll help you make lasting memories and to make it worth your time and taste..</p>
