--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <a href="index.html" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <img src="assets/img/IMG_2159.png" alt="">
-          <h1 class="sitename">Stone Grill Restaurant</h1>
+          <h2 class="sitename">Stone Grill Restaurant</h2>
         </a>
 
         <nav id="navmenu" class="navmenu">
@@ -111,7 +111,7 @@
         <div class="carousel-item active">
           <img src="assets/IMG_0111.jpeg" alt="">
           <div class="carousel-container">
-            <h3><span>Stone Grill</span> Restaurant</h3>
+            <h3><span></span></h3>
             <p>we’ll help you make lasting memories and to make it worth your time and taste..</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
@@ -123,8 +123,8 @@
         <div class="carousel-item">
           <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
           <div class="carousel-container">
-            <h3>Service that lets you relax and enjoy your moment.</h3>
-            <p>At Stone Grill, every delight is to be embraced, every discomfort gently set aside. And even during busy days or special obligations, there’s always a place for good food and warm hospitality.</p>
+            <h3>relax and enjoy your moment.</h3>
+            <p>theres always a place for good food and warm hospitality.</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
               <a href="hytps://m.me/stonecitygrill" class="btn-get-started">Message Us</a>
