--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,10 @@
     </div>
 
   </footer>
-
+<audio id="bg-music" loop>
+  <source src="assets/audio/stonegrill_bgm_web.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
@@ -1056,7 +1059,8 @@
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v23.0"></script>
     <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
-
+  
+  <script src="assets/js/music-control.js"></script>
 </body>
 
 </html>
