--- a/index.html
+++ b/index.html
@@ -1033,12 +1033,24 @@
         by <a href="https://www.facebook.com/stonecitygrill">@ 2025 Stone Grill Restaurant</a>
       </div>
     </div>
-
+    <!-- Music Control Button -->
+<button onclick="toggleMusic()" id="music-btn" style="
+  position: fixed;
+  bottom: 20px;
+  left: 20px; /* 🔁 changed from right to left */
+  z-index: 9999;
+  background: #b22222;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 6px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  font-size: 14px;
+  cursor: pointer;">
+  🔈 Music: On
+</button>
   </footer>
-<audio id="bg-music" loop>
-  <source src="assets/audio/stonegrill_bgm_web.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>
+
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
