--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
   ======================================================== -->
 </head>
 
+<audio id="bg-music" loop>
+  <source src="assets/stonegrill_bgm_web.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+
+
 <body class="index-page">
 
   <header id="header" class="header fixed-top">
@@ -1033,6 +1039,7 @@
         by <a href="https://www.facebook.com/stonecitygrill">@ 2025 Stone Grill Restaurant</a>
       </div>
     </div>
+    
     <!-- Music Control Button -->
 <button onclick="toggleMusic()" id="music-btn" style="
   position: fixed;
@@ -1050,7 +1057,8 @@
   🔈 Music: On
 </button>
   </footer>
-
+  
+  
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
