--- a/index.html
+++ b/index.html
@@ -789,14 +789,14 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>JM R.</h3>
+                <h3>rodelyn sevillano</h3>
                 <h4>Organization &amp; Founder</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Sarap ng food, sulit ang presyo! Chill place to hang out with friends. Service is fast, and the staff are super friendly.</span>
+                  <span>The food was great that is my first time i came there and i really live the food and the price was worth it 🤩 surely i will come back to this place again</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -805,14 +805,14 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Claire T.</h3>
+                <h3>brandy lorona</h3>
                 <h4>Designer</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>We were just passing through Bato and stumbled upon Stone Grill — what a gem! The seafood platter was fresh and flavorful. Highly recommended for anyone visiting stone grill."</span>
+                  <span>LAMI ug swak sa bulsa nga food!! mag balik balik ko diri! highly recommended.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -821,14 +821,14 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena and Rodel</h3>
+                <h3>Madine Labin</h3>
                 <h4>Baybay leyte</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Perfect place for a quiet dinner with my husband. The hot stone steak is our favorite — cooked just the way we like it, right at our table. Feels like a mini getaway!</span>
+                  <span>Delicious foods and very accomodating. Loved also the place. It's alongst the highway. Highly recommended. 😊</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -837,14 +837,14 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Maricar L.</h3>
+                <h3>Eden Noreen Yangyang</h3>
                 <h4>Ormoc city</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Stone Grill has become our go-to spot for family dinners. The sizzling plates are not only delicious but a fun experience for the kids! Always great service and a relaxing vibe..</span>
+                  <span>The place is big and the ocean view is good. It's relaxing but a bit hot. The employees are accommodating.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -853,14 +853,14 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>mario Blazo</h3>
-                <h4>Entrepreneur</h4>
+                <h3>Katrina Ruales</h3>
+                <h4>Nurse</h4>
                 <div class="stars">
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Your enjoyable and relaxing experience starts with stone grill</span>
+                  <span>Their food is great and good for the price. We love the seaside tables. sadly we experienced to be refused to be served as dine in customers since they said they are still cooking for their catering service. I hope next time they won't refuse customers esp if they are your regular customers. And if they are not serving or open for the mean time just put a sign that you are closed for a certain time. We still go back their for time to time because of the sea view. 😊👌</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
