--- a/index.html
+++ b/index.html
@@ -372,10 +372,7 @@
 
 <!-- Specials Section -->
 <section id="specials" class="specials section">
-  <div class="container section-title" data-aos="fade-up">
-    <h3>WE OFFER</h3>
-    <div><span>CATERING </span> <span class="description-title">PACKAGES</span></div>
-  </div>
+  
 
   <div class="container" data-aos="fade-up" data-aos-delay="100">
     <div class="row">
@@ -385,7 +382,7 @@
             <a class="nav-link active show" data-bs-toggle="tab" href="#specials-tab-1">Food Package</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" data-bs-toggle="tab" href="#specials-tab-2">Seafood Favorites</a>
+            <a class="nav-link active show" data-bs-toggle="tab" href="#specials-tab-2">BOODLE PACK</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" data-bs-toggle="tab" href="#specials-tab-3">Filipino Classics</a>
@@ -404,7 +401,7 @@
             <div class="row">
               <div class="col-lg-8 details order-2 order-lg-1">
                 <h3>Food Package</h3>
-                <p class="fst-italic">Stone Grill Catering Service.</p>
+                <p class="fst-italic">FOOD PACKAGES.</p>
                 <p> Enjoy delicious food and stress-free celebrations! Whether you’re planning a birthday, company event, or any special gathering, our catering service brings flavorful dishes and warm hospitality to your occasion. Book now VENUE IS FRE. .</p>
               </div>
               <div class="col-lg-4 text-center order-1 order-lg-2">
@@ -419,6 +416,11 @@
   </div>
 </section><!-- /Specials Section -->
 
+
+    <h3>WE OFFER Catering Services</h3>
+    <p>We offer catering services for all occasions, from birthdays to corporate events. Our team will work with you to create a customized menu that fits your needs and budget.</p>
+
+  
     <!-- Events Section -->
     <section id="events" class="events section">
 
