--- a/index.html
+++ b/index.html
@@ -245,6 +245,14 @@
     <div><span></span> <span class="description-title">Stone Grill Dishes</span></div>
   </div>
 
+<section id="menu-gallery" class="menu-section">
+  <div class="menu-container">
+    <img src="assets/img/menu/menuF.jpg" alt="Stone Grill Set Meals" class="menu-image" />
+    <img src="assets/img/menu/menu-2.png" alt="Stone Grill Full Menu" class="menu-image" />
+  </div>
+</section>
+
+
   <div class="container isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
     <div class="row" data-aos="fade-up" data-aos-delay="100">
       <div class="col-lg-12 d-flex justify-content-center">
