--- a/index.html
+++ b/index.html
@@ -424,13 +424,17 @@
   </div>
 </section><!-- /Specials Section -->
 
-
-    <h3>WE OFFER Catering Services</h3>
-    <p>We offer catering services for all occasions, from birthdays to corporate events. Our team will work with you to create a customized menu that fits your needs and budget.</p>
-
-  
     <!-- Events Section -->
     <section id="events" class="events section">
+
+       <div class="container" data-aos="fade-up">
+    <h3>🎉 WE OFFER Catering Services</h3>
+    <p>
+      We provide catering for birthdays, weddings, and corporate events. 
+      Let us help make your celebration delicious and unforgettable with 
+      customized packages that suit your taste and budget.
+    </p>
+  </div>
 
       <img class="slider-bg" src="assets/img/events-bg.jpg" alt="" data-aos="fade-in">
 
