--- a/index.html
+++ b/index.html
@@ -44,9 +44,26 @@
 <body class="index-page">
   
   <audio id="bg-music" loop>
-  <source src="/assets/stonegrill_bgm_web.mp3" type="audio/mpeg">
+  <source src="assets/stonegrill_bgm_web.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
+  
+  <!-- Music Control Button -->
+<button onclick="toggleMusic()" id="music-btn" style="
+  position: fixed;
+  bottom: 20px;
+  left: 20px; /* 🔁 changed from right to left */
+  z-index: 9999;
+  background: #b22222;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 6px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  font-size: 14px;
+  cursor: pointer;">
+  🔈 Music: On
+</button>
 
   <header id="header" class="header fixed-top">
 
@@ -1054,21 +1071,7 @@
     </div>
     
     <!-- Music Control Button -->
-<button onclick="toggleMusic()" id="music-btn" style="
-  position: fixed;
-  bottom: 20px;
-  left: 20px; /* 🔁 changed from right to left */
-  z-index: 9999;
-  background: #b22222;
-  color: white;
-  padding: 10px 15px;
-  border: none;
-  border-radius: 6px;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-  font-size: 14px;
-  cursor: pointer;">
-  🔈 Music: On
-</button>
+
   </footer>
   
   
