--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Stone Grill Restaurant</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <!-- Primary Meta Tags -->
+<title>Stone Grill Restaurant | Enjoyable and Relaxing Dining</title>
+<meta name="title" content="Stone Grill Restaurant | Enjoyable and Relaxing Dining">
+<meta name="description" content="Stone Grill Restaurant offers a unique dining experience in Leyte, Philippines. Enjoy sizzling plates, fresh seafood, and family-friendly meals in a relaxing ambiance.">
+
+<!-- SEO Keywords -->
+<meta name="keywords" content="Stone Grill Restaurant, Hilongos Leyte, Bato, sizzling food, seafood, boodle fight, family dining, birthday venue, Filipino food, restobar Leyte, grill restaurant">
+
+<!-- Author -->
+<meta name="author" content="Niñonito Antolihao">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://stonegrillresto.net/">
+<meta property="og:title" content="Stone Grill Restaurant | Enjoyable and Relaxing Dining">
+<meta property="og:description" content="Visit Stone Grill in Leyte for sizzling food, boodle sets, seafood trays, and a relaxing venue for celebrations.">
+<meta property="og:image" content="https://stonegrillresto.net/assets/img/og-image.jpg">
 
   <!-- Standard favicon (multi-size .ico) -->
 <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
