--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <meta name="keywords" content="Stone Grill Restaurant, Hilongos Leyte, Bato, sizzling food, seafood, boodle fight, family dining, birthday venue, Filipino food, restobar Leyte, grill restaurant">
 
 <!-- Author -->
-<meta name="author" content="Niñonito Antolihao">
+<meta name="author" content="Ninox Antolihao">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://stonegrillresto.net/">
 <meta property="og:title" content="Stone Grill Restaurant | Enjoyable and Relaxing Dining">
 <meta property="og:description" content="Visit Stone Grill in Leyte for sizzling food, boodle sets, seafood trays, and a relaxing venue for celebrations.">
-<meta property="og:image" content="https://stonegrillresto.net/assets/img/IMG_0126.jpegjpg">
+<meta property="og:image" content="https://stonegrillresto.net/Delicious/assets/img/IMG_0127.jpeg">
 
   <!-- Standard favicon (multi-size .ico) -->
 <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
