--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <meta property="og:url" content="https://stonegrillresto.net/">
 <meta property="og:title" content="Stone Grill Restaurant | Enjoyable and Relaxing Dining">
 <meta property="og:description" content="Visit Stone Grill in Leyte for sizzling food, boodle sets, seafood trays, and a relaxing venue for celebrations.">
-<meta property="og:image" content="https://stonegrillresto.net/assets/img/IMG_0127.jpeg">
+<meta property="og:image" content="https://stonegrillresto.net/assets/img/hero-carousel/IMG_0127.jpeg">
 
   <!-- Standard favicon (multi-size .ico) -->
 <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
