--- a/index.html
+++ b/index.html
@@ -3,57 +3,46 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <!-- Primary Meta Tags -->
-<title>Stone Grill Restaurant | Enjoyable and Relaxing Dining</title>
-<meta name="title" content="Stone Grill Restaurant | Enjoyable and Relaxing Dining">
-<meta name="description" content="Stone Grill Restaurant offers a unique dining experience in Leyte, Philippines. Enjoy sizzling plates, fresh seafood, and family-friendly meals in a relaxing ambiance.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- SEO Keywords -->
-<meta name="keywords" content="Stone Grill Restaurant, Hilongos Leyte, Bato, sizzling food, seafood, boodle fight, family dining, birthday venue, Filipino food, restobar Leyte, grill restaurant">
+  <!-- Title & SEO -->
+  <title>Stone Grill Restaurant | Enjoyable and Relaxing Dining</title>
+  <meta name="description" content="Stone Grill Restaurant offers a unique dining experience in Leyte, Philippines. Enjoy sizzling plates, fresh seafood, and family-friendly meals in a relaxing ambiance.">
+  <meta name="keywords" content="Stone Grill Restaurant, Hilongos Leyte, Bato, sizzling food, seafood, boodle fight, Filipino food, family dining, restobar Leyte, grill restaurant">
+  <meta name="author" content="Ninox Antolihao">
 
-<!-- Author -->
-<meta name="author" content="Ninox Antolihao">
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://stonegrillresto.net/">
+  <meta property="og:title" content="Stone Grill Restaurant | Enjoyable and Relaxing Dining">
+  <meta property="og:description" content="Visit Stone Grill in Leyte for sizzling food, boodle sets, seafood trays, and a relaxing venue for celebrations.">
+  <meta property="og:image" content="https://stonegrillresto.net/assets/img/hero-carousel/IMG_0127.jpeg">
 
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://stonegrillresto.net/">
-<meta property="og:title" content="Stone Grill Restaurant | Enjoyable and Relaxing Dining">
-<meta property="og:description" content="Visit Stone Grill in Leyte for sizzling food, boodle sets, seafood trays, and a relaxing venue for celebrations.">
-<meta property="og:image" content="https://stonegrillresto.net/assets/img/hero-carousel/IMG_0127.jpeg">
-
-  <!-- Standard favicon (multi-size .ico) -->
-<link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
-<!-- Apple Touch Icon -->
-<link rel="apple-touch-icon" href="assets/img/apple-touch-icon180x180.png">
-<!-- Optional: Android manifest -->
-
-<link rel="manifest" href="site.webmanifest">
+  <!-- Icons & PWA -->
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="theme-color" content="#b22222">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="StoneGrill">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon180x180.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
+  <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
 
   <!-- Fonts -->
-   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@300;400;500;700&family=Poppins:wght@300;400;500;600;700&family=Satisfy&display=swap" rel="stylesheet">
 
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy:wght@400&display=swap" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
+  <!-- CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <!-- =======================================================
-  * Template Name: Delicious
-  * Template URL: https://bootstrapmade.com/delicious-free-restaurant-bootstrap-theme/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
+
 
 <body class="index-page">
   
@@ -1115,6 +1104,14 @@
   <script src="assets/js/main.js"></script>
   
   <script src="assets/js/music-control.js"></script>
+  <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('service-worker.js')
+      .then(reg => console.log("✅ Service Worker registered"))
+      .catch(err => console.error("❌ SW registration failed", err));
+  }
+</script>
+
 </body>
 
 </html>
