--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Restaurant",
+  "name": "Stone Grill Restaurant",
+  "image": "https://stonegrillresto.net/assets/img/hero-carousel/IMG_0127.jpeg",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Bato",
+    "addressRegion": "Leyte",
+    "addressCountry": "PH"
+  },
+  "telephone": "+63-53-568-0539",
+  "url": "https://stonegrillresto.net",
+  "servesCuisine": "Filipino, Seafood, Grilled Food",
+  "priceRange": "₱₱",
+  "openingHours": "Mo-Su 10:00-21:00"
+}
+</script>
+
 
   <!-- Title & SEO -->
   <title>Stone Grill Restaurant | Enjoyable and Relaxing Dining</title>
@@ -41,6 +61,15 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/css/main.css" rel="stylesheet">
+  <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TP4B4GTZY9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-TP4B4GTZY9');
+</script>
+
 </head>
 
 
