--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#menu">Menu</a></li>
             <li><a href="#specials">Specials</a></li>
-            <li><a href="#events">Events</a></li>
+            <li><a href="#events">Catering</a></li>
             <li><a href="#chefs">STAFF</a></li>
             <li><a href="#gallery">Gallery</a></li>
             <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -141,31 +141,31 @@
     <section id="hero" class="hero section dark-background">
 
       <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
-
         <div class="carousel-item active">
           <img src="assets/IMG_0111.jpeg" alt="">
           <div class="carousel-container">
-            <h3><span></span></h3>
-            <p>we’ll help you make lasting memories and to make it worth your time and taste..</p>
-            <div>
+            <h2><span></span></h2>
+            <p>we will help you make lasting memories and to make it worth your time and taste..</p>
+          <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
               <a href="https://m.me/stonecitygrill" class="btn-get-started">Book a table</a>
             </div>
           </div>
-        </div><!-- End Carousel Item -->
-
-        <div class="carousel-item">
+        </div>
+      
+          <div class="carousel-item">
           <img src="assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
           <div class="carousel-container">
-            <h3>relax and enjoy your moment.</h3>
+            <h2>relax and enjoy your moment.</h2>
             <p>theres always a place for good food and warm hospitality.</p>
             <div>
               <a href="#menu" class="btn-get-started">Our Menu</a>
-              <a href="hytps://m.me/stonecitygrill" class="btn-get-started">Message Us</a>
+              <a href="https://m.me/stonecitygrill" class="btn-get-started">Message Us</a>
             </div>
           </div>
         </div><!-- End Carousel Item -->
 
+          
         <div class="carousel-item">
           <img src="assets/img/hero-carousel/hero-carousel-32.jpg" alt="">
           <div class="carousel-container">
