--- a/index.html
+++ b/index.html
@@ -683,6 +683,22 @@
             </div>
           </div><!-- End Team Member -->
 
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="member">
+              <div class="pic"><img src="assets/img/chefs/IMG_2174.jpeg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Jacky Moreno</h4>
+                <span>Leader</span>
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter-x"></i></a>
+                  <a href="https://facebook.com/stephanie.felicilda"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/stephanie.felicilda"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.tiktok.com/@yourusername"><i class="bi bi-tiktok"></i></a>
+                </div>
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+
         </div>
 
       </div>
