--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
       </div>
       
       <div class="col-lg-6 menu-item isotope-item filter-specialty">
-        <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
+        <img src="assets/img/menu/IMG_0191.png" class="menu-img" alt="">
         <div class="menu-content">
           <a href="#">SET-C</a><span>₱1980</span>
         </div>
